Added the view for a list of albums that we can later use for search.

--- a/backend/src/main/resources/templates/find_albums.twig
+++ b/backend/src/main/resources/templates/find_albums.twig
@@ -5,5 +5,7 @@
                 "order": "asc"
             }
         }
-    ]
+    ],
+    "from": {{ default(from, 0) }},
+    "size": {{ default(size, 10) }}
 }
