--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,6 +9,7 @@
     <div>&nbsp;{{title}}&nbsp;</div>
     <div>
       <a [routerLink]="['/albums']" md-raised-button>Albums</a>
+      <a [routerLink]="['/rating']" md-raised-button>Rating</a>
       <a [routerLink]="['/about']" md-raised-button>About</a>
     </div>
   </md-toolbar>
