Start with the Dashboard

--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -1,3 +1,11 @@
-<p>
-  about works!
-</p>
+<p>This sample application is meant to be used for a number of presentation I am giving. The application can be used to mark your favorite albums out of the Rolling Stone Top 500.</p>
+<a href="http://www.rollingstone.com/music/lists/500-greatest-albums-of-all-time-20120531">Rolling Stone Top 500</a>
+<p>Talks I am using the web site for:</p>
+<ul>
+  <li><a href="http://amsterdam2017.codemotionworld.com/talk-detail/?detail=4865">Relevent Search Results</a> - Code Motion Amsterdam 2017 </li>
+</ul>
+<p>Of course this project would have been impossible with great open source projects. Below some of the projects that are really important to the project.</p>
+
+<ul>
+<li><a href="https://swimlane.gitbooks.io/ngx-charts/content/">ngx-charts</a></li>
+</ul>
