Started playing with KMeans

--- a/frontend/src/app/albums/albums.component.html
+++ b/frontend/src/app/albums/albums.component.html
@@ -16,7 +16,7 @@
       <md-card-content>
         <md-grid-list cols="2" rowHeight="220px">
           <md-grid-tile >
-            <img src="http://localhost:8080/images/{{album.image}}" width="200px"/>
+            <img src="{{backend}}images/{{album.image}}" width="200px"/>
           </md-grid-tile>
           <md-grid-tile>
             <ul>
