--- a/frontend/src/app/rating/rating-dialog-detail.component.html
+++ b/frontend/src/app/rating/rating-dialog-detail.component.html
@@ -4,7 +4,7 @@
     <md-card-content>
       <md-grid-list cols="2">
         <md-grid-tile >
-          <img src="http://localhost:8080/images/{{album.image}}" width="200px"/>
+          <img src="{{backend}}images/{{album.image}}" width="200px"/>
         </md-grid-tile>
         <md-grid-tile>
           <md-list>
