--- a/frontend/src/app/rating/rating.component.html
+++ b/frontend/src/app/rating/rating.component.html
@@ -1,36 +1,54 @@
-<h3>User id</h3>
-<p>{{user_id}}</p>
+<div>
+  <p>In this screen you can rate some of the RollingStone 500 albums. You do not have to rate them all. Rate about 20 or
+    so. Rate some of the albums your really like, are ok, really not like. The black square means no opinion, which is
+    the default.</p>
+  <md-icon md-list-icon class="thumbs_up">mood</md-icon>
+  <span>Cool album</span>
+  <md-icon md-list-icon class="thumbs_neutral">sentiment_neutral</md-icon>
+  <span>Ok album</span>
+  <md-icon md-list-icon class="thumbs_down">mood_bad</md-icon>
+  <span>Bad album</span>
+  <md-icon md-list-icon>check_box_outline_blank</md-icon>
+  <span>No opinion</span>
+</div>
 <md-list>
   <md-list-item *ngFor="let album of albums">
-    <img md-list-avatar src="http://localhost:8080/images/thumbnails/{{album.image}}" width="60px"/>
+    <img md-list-avatar src="{{backend}}images/thumbnails/{{album.image}}" width="60px"/>
     <h3 md-line> {{album.album}}</h3>
     <p md-line>
       <span> {{album.artist}} </span>
-      <button md-icon-button  (click)="showAlbumDetails(album)"><md-icon>info</md-icon></button>
+      <button md-icon-button (click)="showAlbumDetails(album)">
+        <md-icon>info</md-icon>
+      </button>
       <button md-icon-button (click)="openYoutubeSearch(album)"><img src="/assets/img/youtube.png"></button>
     </p>
     <button md-icon-button (click)="chooseEmotion(3,album.sequence)">
       <md-icon md-list-icon
                [ngClass]="{'thumbs_up':ratings.ratings[album.sequence-1]==3,
                 'no_choice':ratings.ratings[album.sequence-1]!=3}"
-      >mood</md-icon>
+      >mood
+      </md-icon>
     </button>
     <button md-icon-button (click)="chooseEmotion(2,album.sequence)">
       <md-icon md-list-icon
                [ngClass]="{'thumbs_neutral':ratings.ratings[album.sequence-1]==2,
                 'no_choice':ratings.ratings[album.sequence-1]!=2}"
-      >sentiment_neutral</md-icon>
+      >sentiment_neutral
+      </md-icon>
     </button>
     <button md-icon-button (click)="chooseEmotion(1,album.sequence)">
       <md-icon md-list-icon
                [ngClass]="{'thumbs_down':ratings.ratings[album.sequence-1]==1,
                 'no_choice':ratings.ratings[album.sequence-1]!=1}"
-      >mood_bad</md-icon>
+      >mood_bad
+      </md-icon>
     </button>
     <button md-icon-button (click)="chooseEmotion(0,album.sequence)">
       <md-icon md-list-icon
                [ngClass]="{'no_choice':ratings.ratings[album.sequence-1]!=0}"
-      >check_box_outline_blank</md-icon>
+      >check_box_outline_blank
+      </md-icon>
     </button>
   </md-list-item>
 </md-list>
+<em>User id</em>: <p>{{user_id}}</p>
