Added the pie chart for evidence types

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -2,6 +2,9 @@
   <md-grid-tile colspan="6" rowspan="3">
     <app-ratingsanalytics [ratingsData]="ratingsData"></app-ratingsanalytics>
   </md-grid-tile>
+  <md-grid-tile colspan="6" rowspan="3">
+    <app-evidencesanalytics [evidencesData]="evidencesData"></app-evidencesanalytics>
+  </md-grid-tile>
   <md-grid-tile colspan="2" rowspan="2">
     <app-numusersanalytics [numUsers]="numUsers"></app-numusersanalytics>
   </md-grid-tile>
