--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -1,11 +1,17 @@
-<p>This sample application is meant to be used for a number of presentation I am giving. The application can be used to mark your favorite albums out of the Rolling Stone Top 500.</p>
+<p>This sample application is meant to be used for a number of presentation I am giving. The application can be used to mark your favorite albums out of the Rolling Stone Top 500. If you mark the albums you get recommendations based on these albums.</p>
 <a href="http://www.rollingstone.com/music/lists/500-greatest-albums-of-all-time-20120531">Rolling Stone Top 500</a>
 <p>Talks I am using the web site for:</p>
 <ul>
+  <li><a href="http://amsterdam2017.codemotionworld.com/webinar_coenradie">Building your first recommender</a></li>
   <li><a href="http://amsterdam2017.codemotionworld.com/talk-detail/?detail=4865">Relevent Search Results</a> - Code Motion Amsterdam 2017 </li>
 </ul>
 <p>Of course this project would have been impossible with great open source projects. Below some of the projects that are really important to the project.</p>
 
 <ul>
-<li><a href="https://swimlane.gitbooks.io/ngx-charts/content/">ngx-charts</a></li>
+  <li><a href="http://projects.spring.io/spring-boot/">Spring Boot</a> </li>
+  <li><a href="https://v2.angular.io/docs/ts/latest/">Angular (v2)</a> </li>
+  <li><a href="http://lenskit.org">Lenskit</a> </li>
+  <li><a href="https://www.elastic.co">Elastic</a> </li>
+  <li><a href="https://github.com/luminis-ams/elastic-rest-spring-wrapper">Elastic Rest Wrapper</a> </li>
+  <li><a href="https://swimlane.gitbooks.io/ngx-charts/content/">ngx-charts</a></li>
 </ul>
