Adds search to the api, with filters and aggregations

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,6 +10,7 @@
     <div>
       <a [routerLink]="['']" md-raised-button>Home</a>
       <a [routerLink]="['/rating']" md-raised-button>Rating</a>
+      <a [routerLink]="['/search']" md-raised-button>Search</a>
       <a [routerLink]="['/about']" md-raised-button>About</a>
     </div>
   </md-toolbar>
