--- a/backend/src/main/resources/templates/search_albums_ltr.twig
+++ b/backend/src/main/resources/templates/search_albums_ltr.twig
@@ -44,7 +44,7 @@
                     "params": {
                         "keywords": "{{ search }}"
                     },
-                    "model": "test_6"
+                    "model": "{{ model }}"
                 }
             }
         }
